{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 20,
  "lineage": "c03b19fe-e1d7-2070-c35f-bc6c5b56bc6b",
  "resources": [
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.192.171.247",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-04-30T09:40:53.492-07:00",
            "id": "projects/remotedevenv-383413/regions/us-central1/addresses/nat",
            "name": "nat",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "remotedevenv-383413",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/regions/us-central1/addresses/nat",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/regions/us-central1/routers/router"
            ]
          }
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "32340"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-30T09:41:05.628-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/remotedevenv-383413/global/firewalls/allow-prometheus",
            "log_config": [],
            "name": "allow-prometheus",
            "network": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/networks/kubernetes",
            "priority": 1000,
            "project": "remotedevenv-383413",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/firewalls/allow-prometheus",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.google_compute_network.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-30T09:41:05.686-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/remotedevenv-383413/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/networks/kubernetes",
            "priority": 1000,
            "project": "remotedevenv-383413",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.google_compute_network.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/remotedevenv-383413/global/networks/kubernetes",
            "mtu": 1460,
            "name": "kubernetes",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "remotedevenv-383413",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/networks/kubernetes"
          }
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-30T09:41:05.576-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/remotedevenv-383413/regions/us-central1/routers/router",
            "name": "router",
            "network": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/networks/kubernetes",
            "project": "remotedevenv-383413",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/regions/us-central1/routers/router"
          },
          "dependencies": [
            "module.kubernetes.google_compute_network.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "remotedevenv-383413/us-central1/router/nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/regions/us-central1/addresses/nat"
            ],
            "project": "remotedevenv-383413",
            "region": "us-central1",
            "router": "router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/regions/us-central1/subnetworks/private",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.kubernetes.google_compute_address.nat",
            "module.kubernetes.google_compute_network.kubernetes",
            "module.kubernetes.google_compute_router.router",
            "module.kubernetes.google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-30T09:41:05.698-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/remotedevenv-383413/regions/us-central1/subnetworks/private",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "private",
            "network": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/networks/kubernetes",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "remotedevenv-383413",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.48.0.0/14",
                "range_name": "k8s-pod-range"
              },
              {
                "ip_cidr_range": "10.52.0.0/20",
                "range_name": "k8s-service-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/regions/us-central1/subnetworks/private",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.kubernetes.google_compute_network.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.workstation",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allowGrafanaport",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000",
                  "9090",
                  "8080",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-30T09:41:05.322-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/remotedevenv-383413/global/firewalls/grafana",
            "log_config": [],
            "name": "grafana",
            "network": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/networks/workstationvpc",
            "priority": 1000,
            "project": "remotedevenv-383413",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/firewalls/grafana",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "grafana"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.workstation.google_compute_network.workstationvpc"
          ]
        }
      ]
    },
    {
      "module": "module.workstation",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allowmetricsport",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9100"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-30T09:41:05.305-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/remotedevenv-383413/global/firewalls/metrics",
            "log_config": [],
            "name": "metrics",
            "network": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/networks/workstationvpc",
            "priority": 1000,
            "project": "remotedevenv-383413",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/firewalls/metrics",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "metrics"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.workstation.google_compute_network.workstationvpc"
          ]
        }
      ]
    },
    {
      "module": "module.workstation",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "keycloakldap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000",
                  "9090",
                  "8080",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-30T09:41:05.355-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/remotedevenv-383413/global/firewalls/keycloakldap",
            "log_config": [],
            "name": "keycloakldap",
            "network": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/networks/workstationvpc",
            "priority": 1000,
            "project": "remotedevenv-383413",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/firewalls/keycloakldap",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "keydap"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.workstation.google_compute_network.workstationvpc"
          ]
        }
      ]
    },
    {
      "module": "module.workstation",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "9100",
                  "1000-2000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-04-30T09:41:05.333-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/remotedevenv-383413/global/firewalls/ping-firewall",
            "log_config": [],
            "name": "ping-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/networks/workstationvpc",
            "priority": 1000,
            "project": "remotedevenv-383413",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/firewalls/ping-firewall",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "ping"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.workstation.google_compute_network.workstationvpc"
          ]
        }
      ]
    },
    {
      "module": "module.workstation",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-30T09:41:05.201-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/remotedevenv-383413/global/firewalls/alloww-ssh",
            "log_config": [],
            "name": "alloww-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/networks/workstationvpc",
            "priority": 1000,
            "project": "remotedevenv-383413",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/firewalls/alloww-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.workstation.google_compute_network.workstationvpc"
          ]
        }
      ]
    },
    {
      "module": "module.workstation",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "workstation",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "workstation1",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/zones/europe-west9-a/disks/workstation1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/remotedevenv-383413/zones/europe-west9-a/instances/workstation1",
            "instance_id": "4988704323889472725",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "enable-oslogin": "true"
            },
            "metadata_fingerprint": "E1fdeAaOTT8=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -y build-essential git wget curl;",
            "name": "workstation1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.163.83.188",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/networks/workstationvpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/regions/europe-west9/subnetworks/wsaa-pvc-subnet",
                "subnetwork_project": "remotedevenv-383413"
              }
            ],
            "project": "remotedevenv-383413",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/zones/europe-west9-a/instances/workstation1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ping",
              "ssh"
            ],
            "tags_fingerprint": "3P2f8G8FFEg=",
            "zone": "europe-west9-a"
          },
          "dependencies": [
            "module.workstation.google_compute_network.workstationvpc",
            "module.workstation.google_compute_subnetwork.wsaa-pvc-subnet"
          ]
        },
        {
          "index_key": "workstation2",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/zones/europe-west9-a/disks/workstation2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/remotedevenv-383413/zones/europe-west9-a/instances/workstation2",
            "instance_id": "8526204800950543573",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "enable-oslogin": "true"
            },
            "metadata_fingerprint": "E1fdeAaOTT8=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -y build-essential git wget curl;",
            "name": "workstation2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.163.148.71",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/networks/workstationvpc",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/regions/europe-west9/subnetworks/wsaa-pvc-subnet",
                "subnetwork_project": "remotedevenv-383413"
              }
            ],
            "project": "remotedevenv-383413",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/zones/europe-west9-a/instances/workstation2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "metrics",
              "ping",
              "ssh"
            ],
            "tags_fingerprint": "Xw22_HjS6VY=",
            "zone": "europe-west9-a"
          },
          "dependencies": [
            "module.workstation.google_compute_network.workstationvpc",
            "module.workstation.google_compute_subnetwork.wsaa-pvc-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.workstation",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "workstationvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/remotedevenv-383413/global/networks/workstationvpc",
            "mtu": 1460,
            "name": "workstationvpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "remotedevenv-383413",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/networks/workstationvpc"
          }
        }
      ]
    },
    {
      "module": "module.workstation",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "wsaa-pvc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-30T09:41:06.065-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/remotedevenv-383413/regions/europe-west9/subnetworks/wsaa-pvc-subnet",
            "ip_cidr_range": "10.0.1.0/29",
            "name": "wsaa-pvc-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/global/networks/workstationvpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "remotedevenv-383413",
            "purpose": "PRIVATE",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remotedevenv-383413/regions/europe-west9/subnetworks/wsaa-pvc-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.workstation.google_compute_network.workstationvpc"
          ]
        }
      ]
    }
  ]
}